# kindaOS

./: Cargo.toml  README.md  build.sh  run.sh  test.sh
src/: allocator.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  shell.rs  vga_buffer.rs
src/allocator/: fixed_size_block.rs
src/task/: executor.rs  keyboard.rs  mod.rs
